--- a/_sass/components/_components.textbook__sidebar.scss
+++ b/_sass/components/_components.textbook__sidebar.scss
@@ -30,6 +30,12 @@ $color-sidebar-divider: #bbb !default;
   }
 }
 
+
+.c-sidebar__title {
+  font-size: 0.5em;
+  /*margin: 0.5em 0;*/
+}
+
 /* [1] */
 .c-sidebar__chapters {
   list-style: none;
@@ -50,6 +56,7 @@ li.c-sidebar__chapter > a {
 }
 
 li.c-sidebar__subsection {
+  font-size: 0.5em;
   margin-left: 20px;
 }
 
