--- a/_sass/components/_components.textbook__sidebar.scss
+++ b/_sass/components/_components.textbook__sidebar.scss
@@ -39,7 +39,7 @@ $color-sidebar-divider: #bbb !default;
 /* [1] */
 .c-sidebar__chapters {
   list-style: none;
-  font-size: 0.25em;
+  /*font-size: 0.25em;*/
   margin-left: 0;
   margin-bottom: 0;
 }
