--- a/_sass/components/_components.textbook__sidebar.scss
+++ b/_sass/components/_components.textbook__sidebar.scss
@@ -19,7 +19,7 @@ $color-sidebar-divider: #bbb !default;
   background-color: $color-sidebar-bg;
   padding: $spacing-unit-small;
 
-  @include inuit-font-size(12px);
+  @include inuit-font-size(14px);
   border-right: 1px solid rgba(0, 0, 0, 0.07);
   opacity: 0.6;
   -webkit-transition: opacity 0.2s ease-in-out;
@@ -28,6 +28,11 @@ $color-sidebar-divider: #bbb !default;
   &:hover {
     opacity: 1;
   }
+}
+
+
+.c-sidebar__title {
+  margin-bottom: -4px;
 }
 
 /* [1] */
@@ -39,18 +44,19 @@ $color-sidebar-divider: #bbb !default;
 
 li.c-sidebar__chapter > a {
   font-size: 1.2em;
-  margin-bottom: -10px;
+  margin-bottom: -8px;
 }
 
 /* [1] */
 .c-sidebar__sections {
   list-style: none;
   margin-left: $spacing-unit-small;
-  margin-bottom: 0;
+  margin-bottom: -8px;
 }
 
 li.c-sidebar__subsection {
   margin-left: 20px;
+  margin-bottom: -8px;
 }
 
 /* [2] */
