--- a/_sass/components/_components.textbook__sidebar.scss
+++ b/_sass/components/_components.textbook__sidebar.scss
@@ -62,9 +62,8 @@ li.c-sidebar__subsection {
 /* [2] */
 .c-sidebar__entry {
   display: block;
-
-  padding: $spacing-unit-tiny;
-
+  /*padding: $spacing-unit-tiny;*/
+  padding: 0;
   color: $color-sidebar-entry;
   text-decoration: none;
 
