--- a/_sass/components/_components.textbook__sidebar.scss
+++ b/_sass/components/_components.textbook__sidebar.scss
@@ -54,6 +54,11 @@ li.c-sidebar__chapter > a {
   margin-bottom: -15px;
 }
 
+li.c-sidebar__section {
+  margin-left: 10px;
+  margin-bottom: -8px;
+}
+
 li.c-sidebar__subsection {
   margin-left: 20px;
   margin-bottom: -8px;
