--- a/_sass/components/_components.textbook__sidebar.scss
+++ b/_sass/components/_components.textbook__sidebar.scss
@@ -33,6 +33,7 @@ $color-sidebar-divider: #bbb !default;
 
 
 .c-sidebar__title {
+  margin-top: 0px;
   margin-bottom: 4px;
 }
 
@@ -45,6 +46,7 @@ $color-sidebar-divider: #bbb !default;
 
 li.c-sidebar__chapter > a {
   font-size: 1.0em;
+  font-weight: bold;
   margin-left: 6px;
   margin-bottom: 2px;
 }
