--- a/_sass/components/_components.textbook__sidebar.scss
+++ b/_sass/components/_components.textbook__sidebar.scss
@@ -22,7 +22,7 @@ $color-sidebar-divider: #bbb !default;
 
   @include inuit-font-size(14px);
   border-right: 1px solid rgba(0, 0, 0, 0.07);
-  opacity: 0.6;
+  opacity: 1; /*0.6 orig*/
   -webkit-transition: opacity 0.2s ease-in-out;
   transition: opacity 0.2s ease-in-out;
 
@@ -33,8 +33,9 @@ $color-sidebar-divider: #bbb !default;
 
 
 .c-sidebar__title {
+  font-size: 1.2em;
   margin-top: 0px;
-  margin-bottom: 4px;
+  margin-bottom: 8px;
 }
 
 /* [1] */
@@ -95,7 +96,7 @@ li.c-sidebar__subsection {
   border-top: 1px solid $color-sidebar-divider;
   /*margin: $spacing-unit-tiny;*/
   margin-top: 8px;
-  margin-bottom: 0px;
+  margin-bottom: 8px;
 }
 
 /* [5] */
