--- a/_sass/components/_components.textbook__sidebar.scss
+++ b/_sass/components/_components.textbook__sidebar.scss
@@ -33,6 +33,7 @@ $color-sidebar-divider: #bbb !default;
 
 
 .c-sidebar__title {
+  color: #f37726;
   font-size: 1.2em;
   margin-top: 10px;
   margin-bottom: 10px;
