--- a/_sass/components/_components.book__layout.scss
+++ b/_sass/components/_components.book__layout.scss
@@ -24,7 +24,7 @@
  */
 
 $left-sidebar-width: 300px;
-$page-max-width: 1280px;
+$page-max-width: 100%;
 $right-sidebar-width: 220px;
 $topbar-height: 60px;
 
