--- a/_sass/components/_components.book__layout.scss
+++ b/_sass/components/_components.book__layout.scss
@@ -70,6 +70,14 @@ $topbar-height: 60px;
   left: 0;
 }
 
+.c-sidebar__title {
+  color: #f37726;
+  font-size: 1.2em;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+
 .c-textbook__page {
 
   width: $textbook-page-width;
