--- a/_sass/components/_components.book__layout.scss
+++ b/_sass/components/_components.book__layout.scss
@@ -65,6 +65,7 @@ $topbar-height: 60px;
 }
 
 .c-textbook__sidebar {
+  background-color: #ecf5fe;
   width: $left-sidebar-width;
   top: 0;
   left: 0;
