--- a/_sass/components/_components.book__layout.scss
+++ b/_sass/components/_components.book__layout.scss
@@ -24,7 +24,7 @@
  */
 
 $left-sidebar-width: 300px;
-$page-max-width: 100%;
+$page-max-width: 600px;
 $right-sidebar-width: 220px;
 $topbar-height: 60px;
 
@@ -61,7 +61,7 @@ $topbar-height: 60px;
   height: 100vh;
   overflow: auto;
   position: fixed;
-  background-color: $book-background-color; /* [3] */
+  //background-color: $book-background-color; /* [3] */
 }
 
 .c-textbook__sidebar {
