--- a/_sass/components/_components.book__layout.scss
+++ b/_sass/components/_components.book__layout.scss
@@ -55,7 +55,7 @@ $topbar-height: 60px;
   }
 }
 
-.c-textbook__sidebar,
+.c-textbook__sidebar_old,
 .c-textbook__page {
   /* [2] */
   height: 100vh;
@@ -64,11 +64,27 @@ $topbar-height: 60px;
   //background-color: $book-background-color; /* [3] */
 }
 
-.c-textbook__sidebar {
+.c-textbook__sidebar_old {
   background-color: #ecf5fe;
   width: $left-sidebar-width;
   top: 0;
   left: 0;
+}
+
+.c-textbook__sidebar {
+  /*background-color: $color-sidebar-bg;*/
+  background-color: #fcd116;
+  padding: $spacing-unit-small;
+
+  @include inuit-font-size(14px);
+  border-right: 1px solid rgba(0, 0, 0, 0.07);
+  opacity: 1; /*0.6 orig*/
+  -webkit-transition: opacity 0.2s ease-in-out;
+  transition: opacity 0.2s ease-in-out;
+
+  &:hover {
+    opacity: 1;
+  }
 }
 
 .c-sidebar__title {
