--- a/_sass/components/_components.book__layout.scss
+++ b/_sass/components/_components.book__layout.scss
@@ -76,16 +76,11 @@ $topbar-height: 60px;
   background-color: #fcd116;
   width: $left-sidebar-width;
   padding: $spacing-unit-small;
-
-  @include inuit-font-size(14px);
-  border-right: 1px solid rgba(0, 0, 0, 0.07);
-  opacity: 1; /*0.6 orig*/
-  -webkit-transition: opacity 0.2s ease-in-out;
-  transition: opacity 0.2s ease-in-out;
-
-  &:hover {
-    opacity: 1;
-  }
+  height: 100vh;
+  overflow: auto;
+  position: fixed;
+  top: 0;
+  left: 0;
 }
 
 .c-sidebar__title {
