--- a/_sass/components/_components.book__layout.scss
+++ b/_sass/components/_components.book__layout.scss
@@ -61,7 +61,7 @@ $topbar-height: 60px;
   height: 100vh;
   overflow: auto;
   position: fixed;
-  //background-color: $book-background-color; /* [3] */
+  background-color: $book-background-color; /* [3] */
 }
 
 .c-textbook__sidebar_old {
