--- a/_sass/components/_components.book__layout.scss
+++ b/_sass/components/_components.book__layout.scss
@@ -55,7 +55,7 @@ $topbar-height: 60px;
   }
 }
 
-.c-textbook__sidebar_old,
+.c-textbook__sidebar,
 .c-textbook__page {
   /* [2] */
   height: 100vh;
@@ -64,14 +64,14 @@ $topbar-height: 60px;
   background-color: $book-background-color; /* [3] */
 }
 
-.c-textbook__sidebar_old {
-  background-color: #ecf5fe;
+.c-textbook__sidebar {
+  //background-color: #ecf5fe;
   width: $left-sidebar-width;
   top: 0;
   left: 0;
 }
 
-.c-textbook__sidebar {
+.c-textbook__sidebar_new {
   /*background-color: $color-sidebar-bg;*/
   background-color: #fcd116;
   width: $left-sidebar-width;
