--- a/_sass/components/_components.book__layout.scss
+++ b/_sass/components/_components.book__layout.scss
@@ -71,7 +71,7 @@ $topbar-height: 60px;
   left: 0;
 }
 
-.c-textbook__sidebar_new {
+.c-textbook__sidebar {
   /*background-color: $color-sidebar-bg;*/
   background-color: #fcd116;
   //width: $left-sidebar-width;
