--- a/_sass/components/_components.book__layout.scss
+++ b/_sass/components/_components.book__layout.scss
@@ -74,9 +74,8 @@ $topbar-height: 60px;
 .c-textbook__sidebar {
   /*background-color: $color-sidebar-bg;*/
   background-color: #fcd116;
-  //width: $left-sidebar-width;
-  width: 600px;
-  padding: $spacing-unit-small;
+  width: $left-sidebar-width;
+  //padding: $spacing-unit-small;
   height: 100vh;
   overflow: auto;
   position: fixed;
