--- a/_sass/components/_components.book__layout.scss
+++ b/_sass/components/_components.book__layout.scss
@@ -160,11 +160,13 @@ $topbar-height: 60px;
 // Scrollbar width
 ::-webkit-scrollbar {
   width: 5px;
-  background: #f1f1f1;
+  background: #a55a55;
+  //background: #f1f1f1;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #c1c1c1;
+  background: #a55a55;
+  //background: #c1c1c1;
 }
 
 main, nav {
