--- a/_sass/page/settings/settings.global.scss
+++ b/_sass/page/settings/settings.global.scss
@@ -21,5 +21,5 @@ $color-links: #0077d8;
 // Text book variables
 $textbook-page-width: 100%;
 $textbook-page-with-sidebar-width: 70%;
-//$book-background-color: #ecf5fe;
-$book-background-color: white;
+$book-background-color: #ecf5fe;
+//$book-background-color: white;
