--- a/_sass/components/_components.book__layout.scss
+++ b/_sass/components/_components.book__layout.scss
@@ -87,7 +87,7 @@ $topbar-height: 60px;
   /*background-color: $color-sidebar-bg;*/
   background-color: #ecf5fe;
   width: $left-sidebar-width;
-  opacity: 1
+  opacity: 1;
   //padding: $spacing-unit-small;
   height: 100vh;
   overflow: auto;
