--- a/_sass/components/_components.book__layout.scss
+++ b/_sass/components/_components.book__layout.scss
@@ -71,17 +71,9 @@ $topbar-height: 60px;
   left: 0;
 }
 
-.c-textbook__sidebar_junk {
-  /*background-color: $color-sidebar-bg;*/
-  background-color: #fcd116;
-  width: $left-sidebar-width;
-  //padding: $spacing-unit-small;
-  height: 100vh;
-  overflow: auto;
-  position: fixed;
-  top: 0;
-  left: 0;
-}
+//---------------------------------------------
+// Stuff Robbie Beane Added
+//---------------------------------------------
 
 #js-sidebar {
   /*background-color: $color-sidebar-bg;*/
@@ -96,9 +88,6 @@ $topbar-height: 60px;
   left: 0;
 }
 
-
-
-
 .c-sidebar__title {
   color: #f37726;
   font-size: 1.2em;
@@ -106,6 +95,14 @@ $topbar-height: 60px;
   margin-bottom: 10px;
 }
 
+li.c-sidebar__chapter > a {
+  font-size: 1.0em;
+  font-weight: bold;
+  margin-left: 6px;
+  margin-bottom: 2px;
+}
+
+//---------------------------------------------
 
 .c-textbook__page {
 
