--- a/_sass/components/_components.book__layout.scss
+++ b/_sass/components/_components.book__layout.scss
@@ -91,8 +91,8 @@ $topbar-height: 60px;
 }
 
 .c-sidebar__title {
-  //color: #cccccc;
-  color: #f37726;
+  color: #cccccc;
+  //color: #f37726;
   font-size: 1.2em;
   margin-top: 10px;
   margin-bottom: 10px;
@@ -112,7 +112,7 @@ li.c-sidebar__chapter > a {
 }
 
 li.c-sidebar__section {
-  margin-left: 10px;
+  margin-left: 30px;
   margin-bottom: 2px;
 }
 
