--- a/_sass/components/_components.book__layout.scss
+++ b/_sass/components/_components.book__layout.scss
@@ -126,7 +126,7 @@ li.c-sidebar__subsection {
   /*padding: $spacing-unit-tiny;*/
   padding: 0;
   color: $color-sidebar-entry;
-  text-decoration: none
+  text-decoration: none;
 }
 
 //---------------------------------------------
