--- a/_sass/components/_components.book__layout.scss
+++ b/_sass/components/_components.book__layout.scss
@@ -125,8 +125,8 @@ li.c-sidebar__subsection {
   display: block;
   /*padding: $spacing-unit-tiny;*/
   padding: 0;
-  color: $color-sidebar-entry;
-  text-decoration: none;
+  //color: $color-sidebar-entry;
+  //text-decoration: none;
 }
 
 //---------------------------------------------
