--- a/_sass/components/_components.book__layout.scss
+++ b/_sass/components/_components.book__layout.scss
@@ -98,31 +98,38 @@ $topbar-height: 60px;
   //margin-bottom: 10px;
   margin-top: 0px;
   margin-bottom: 0px;
+  padding: 0px;
 }
 
 .c-sidebar__chapters {
   list-style: none;
   margin-left: 0;
-  margin-bottom: 0;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  padding: 0px;
 }
 
 li.c-sidebar__chapter > a {
   font-size: 1.0em;
   font-weight: bold;
   margin-left: 6px;
-  margin-bottom: 2px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  padding: 0px;
 }
 
 li.c-sidebar__section {
-  margin-left: 20px;
+  margin-left: 16px;
   margin-top: 0px;
   margin-bottom: 0px;
   padding: 0px;
 }
 
 li.c-sidebar__subsection {
-  margin-left: 28px;
-  margin-bottom: 2px;
+  margin-left: 24px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  padding: 0px;
 }
 
 .c-sidebar__entry {
