--- a/_sass/components/_components.book__layout.scss
+++ b/_sass/components/_components.book__layout.scss
@@ -91,8 +91,8 @@ $topbar-height: 60px;
 }
 
 .c-sidebar__title {
-  color: #cccccc;
-  //color: #f37726;
+  //color: #cccccc;
+  color: #f37726;
   font-size: 1.2em;
   //margin-top: 10px;
   //margin-bottom: 10px;
@@ -102,6 +102,22 @@ $topbar-height: 60px;
 }
 
 .c-sidebar__chapters {
+  list-style: none;
+  margin-left: 0;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  padding: 0px;
+}
+
+.c-sidebar__sections {
+  list-style: none;
+  margin-left: 0;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  padding: 0px;
+}
+
+.c-sidebar__subsections {
   list-style: none;
   margin-left: 0;
   margin-top: 0px;
