--- a/_sass/components/_components.book__layout.scss
+++ b/_sass/components/_components.book__layout.scss
@@ -134,14 +134,14 @@ li.c-sidebar__chapter > a {
   padding: 0px;
 }
 
-li.c-sidebar__section {
+li.c-sidebar__section > a{
   margin-left: 16px;
   margin-top: 0px;
   margin-bottom: 0px;
   padding: 0px;
 }
 
-li.c-sidebar__subsection {
+li.c-sidebar__subsection > a{
   margin-left: 24px;
   margin-top: 0px;
   margin-bottom: 0px;
