--- a/_sass/components/_components.book__layout.scss
+++ b/_sass/components/_components.book__layout.scss
@@ -91,13 +91,13 @@ $topbar-height: 60px;
 }
 
 .c-sidebar__title {
-  color: #cccccc;
-  //color: #f37726;
+  //color: #cccccc;
+  color: #f37726;
   font-size: 1.2em;
   //margin-top: 10px;
   //margin-bottom: 10px;
-  margin-top: 0px;
-  margin-bottom: 0px;
+  margin-top: 2px;
+  margin-bottom: 2px;
   padding: 0px;
 }
 
