--- a/_sass/components/_components.book__layout.scss
+++ b/_sass/components/_components.book__layout.scss
@@ -101,7 +101,7 @@ $topbar-height: 60px;
   padding: 0px;
 }
 
-.c-sidebar__entry {
+.c-sidebar__entry_old {
   display: block;
   /*padding: $spacing-unit-tiny;*/
   margin-top: 0px;
