--- a/_sass/components/_components.book__layout.scss
+++ b/_sass/components/_components.book__layout.scss
@@ -91,8 +91,8 @@ $topbar-height: 60px;
 }
 
 .c-sidebar__title {
-  color: #cccccc;
-  //color: #f37726;
+  //color: #cccccc;
+  color: #f37726;
   font-size: 1.2em;
   //margin-top: 10px;
   //margin-bottom: 10px;
@@ -124,7 +124,7 @@ $topbar-height: 60px;
 }
 
 li.c-sidebar__chapter > a {
-  font-size: 0.8em;
+  font-size: 0.4em;
   font-weight: bold;
   margin-left: 10px;
   margin-top: 0px;
