--- a/_sass/components/_components.book__layout.scss
+++ b/_sass/components/_components.book__layout.scss
@@ -116,6 +116,7 @@ $topbar-height: 60px;
 }
 
 .c-sidebar__chapters {   //Operates on entire list of chapters
+  font-size: 0.4em;
   list-style: none;
   margin-left: 0;
   margin-top: 0px;
