--- a/_sass/components/_components.book__layout.scss
+++ b/_sass/components/_components.book__layout.scss
@@ -91,9 +91,9 @@ $topbar-height: 60px;
 }
 
 .c-sidebar__title {
-  //color: #cccccc;
-  color: #f37726;
-  font-size: 1.2em;
+  color: #cccccc;
+  //color: #f37726;
+  font-size: 2.4em;
   //margin-top: 10px;
   //margin-bottom: 10px;
   margin-top: 4px;
