--- a/_sass/components/_components.book__layout.scss
+++ b/_sass/components/_components.book__layout.scss
@@ -91,9 +91,9 @@ $topbar-height: 60px;
 }
 
 .c-sidebar__title {
-  color: #cccccc;
-  //color: #f37726;
-  font-size: 2.4em;
+  //color: #cccccc;
+  color: #f37726;
+  font-size: 1.2em;
   //margin-top: 10px;
   //margin-bottom: 10px;
   margin-top: 4px;
@@ -116,7 +116,7 @@ $topbar-height: 60px;
 }
 
 .c-sidebar__chapters {   //Operates on entire list of chapters
-  font-size: 0.4em;
+  //font-size: 0.4em;
   list-style: none;
   margin-left: 0;
   margin-top: 0px;
@@ -124,7 +124,7 @@ $topbar-height: 60px;
   padding: 0px;
 }
 
-li.c-sidebar__chapter > a {
+li.c-sidebar__chapter {
   font-size: 0.4em;
   font-weight: bold;
   margin-left: 10px;
