--- a/_sass/components/_components.book__layout.scss
+++ b/_sass/components/_components.book__layout.scss
@@ -91,13 +91,13 @@ $topbar-height: 60px;
 }
 
 .c-sidebar__title {
-  //color: #cccccc;
-  color: #f37726;
+  color: #cccccc;
+  //color: #f37726;
   font-size: 1.2em;
   //margin-top: 10px;
   //margin-bottom: 10px;
-  margin-top: 4px;
-  margin-bottom: 2px;
+  margin-top: 6px;
+  margin-bottom: 6px;
   padding: 0px;
 }
 
@@ -125,7 +125,7 @@ $topbar-height: 60px;
 }
 
 li.c-sidebar__chapter {
-  font-size: 1em;
+  font-size: 0.8em;
 }
 
 li.c-sidebar__chapter > a{
@@ -136,6 +136,11 @@ li.c-sidebar__chapter > a{
   padding: 0px;
 
   &:hover {
+    text-decoration: underline;
+    color: #f37726;
+  }
+
+  &:active {
     text-decoration: underline;
     color: #f37726;
   }
