--- a/_sass/components/_components.book__layout.scss
+++ b/_sass/components/_components.book__layout.scss
@@ -126,6 +126,10 @@ $topbar-height: 60px;
 
 li.c-sidebar__chapter {
   font-size: 0.8em;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  padding: 0px;
+
 }
 
 li.c-sidebar__chapter > a{
