--- a/_sass/components/_components.book__layout.scss
+++ b/_sass/components/_components.book__layout.scss
@@ -91,8 +91,8 @@ $topbar-height: 60px;
 }
 
 .c-sidebar__title {
-  color: #cccccc;
-  //color: #f37726;
+  //color: #cccccc;
+  color: #f37726;
   font-size: 1.2em;
   //margin-top: 10px;
   //margin-bottom: 10px;
@@ -125,7 +125,8 @@ $topbar-height: 60px;
 }
 
 li.c-sidebar__chapter {
-  font-size: 0.8em;
+  //font-size: 1.0em;
+  font-size: 11px;
   margin-top: 0px;
   margin-bottom: 0px;
   padding: 0px;
