--- a/_sass/components/_components.book__layout.scss
+++ b/_sass/components/_components.book__layout.scss
@@ -138,7 +138,7 @@ li.c-sidebar__chapter {
 }
 
 li.c-sidebar__chapter > a{
-  //font-weight: bold;
+  font-weight: 600;
   margin-left: 10px;
   margin-top: 0px;
   margin-bottom: 0px;
@@ -171,7 +171,7 @@ li.c-sidebar__section > a{
   margin-top: 0px;
   margin-bottom: 0px;
   padding: 0px;
-  
+
   &:visited {
     text-decoration: underline;
     color: #f37726;
