--- a/_sass/components/_components.book__layout.scss
+++ b/_sass/components/_components.book__layout.scss
@@ -144,7 +144,7 @@ li.c-sidebar__chapter > a{
   margin-bottom: 0px;
   padding: 0px;
 
-  &:visited {
+  &:active {
     text-decoration: underline;
     color: #f37726;
   }
@@ -172,7 +172,7 @@ li.c-sidebar__section > a{
   margin-bottom: 0px;
   padding: 0px;
 
-  &:visited {
+  &:active {
     text-decoration: underline;
     color: #f37726;
   }
